hphp/test/zend/good/tests-classes/ctor_dtor.php
<?php

class early {
	function early() {
		echo __CLASS__ . "::" . __FUNCTION__ . "\n";
	}
	function __destruct() {
		echo __CLASS__ . "::" . __FUNCTION__ . "\n";
	}
}

class late {
	function __construct() {
		echo __CLASS__ . "::" . __FUNCTION__ . "\n";
	}
	function __destruct() {
		echo __CLASS__ . "::" . __FUNCTION__ . "\n";
	}
}

$t = new early();
$t->early();
unset($t);
$t = new late();
//unset($t); delay to end of script

echo "Done\n";
?>