hphp/test/zend/bad/tests-classes/constants_error_007.php
<?php
  class aclass
  {
      const myConst = "hello";
  }
  
  echo "\nAttempting to create a reference to a class constant - should be parse error.\n";
  $a = &aclass::myConst;
?>